# crown_schedule

./: pyproject.toml
src/crown_schedule/: __main__.py  schedule.py
src/test/: test_schedule.py
