[tool.poetry]
name = "crown_schedule"
version = "0.1.0"
description = "A Small Example Package"
authors = ["Michael Penhallegon <mike@hematite.tech>"]
license = "Apache-2"
packages = [
    {include="crown_schedule", from="src", format="wheel"}
]

[tool.poetry.dependencies]
python = "^3.10"
wheel = "^0.37.0"
faker = "^17.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake9 = "^3.8.3.post2"
ipdb = "^0.13.13"
mypy = "^1.1.1"

[tool.mypy]
python_version="3.8"
exclude="venv*"

[tool.flake8]
max-line-length=120

[tool.yapf]
based_on_style="google"
ident_width=2

[tool.isort]
line_length=120
force_single_line=true
src_paths=["src/sample_module", "src/sample_module"]

[tool.pytest.ini_options]
markers =  [
    "integration",
    ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
